assets/css/main.css
/* ... */
ul.social-buttons li a:hover,
ul.social-buttons li a:focus,
ul.social-buttons li a:active {
    color: #1a1a1a;
    background-color: transparent;
    transform: scale(1.3);
}

.btn:focus,
.btn:active,
.btn.active,
.btn:active:focus {
    outline: 0;
}

.portfolio-modal .modal-content {
    padding: 100px 0;
    min-height: 100%;
    border: 0;
    border-radius: 0;
    text-align: center;
    background-clip: border-box;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.portfolio-modal .modal-content h2 {
    margin-bottom: 15px;
    font-size: 3em;
}

.portfolio-modal .modal-content p {
    margin-bottom: 30px;
}

.portfolio-modal .modal-content p.item-intro {
    margin: 20px 0 30px;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
}

.portfolio-modal .modal-content ul.list-inline {
    margin-top: 0;
    margin-bottom: 30px;
}

.portfolio-modal .modal-content img {
    margin-bottom: 30px;
}

.portfolio-modal .close-modal {
    position: absolute;
    top: 25px;
    right: 25px;
    width: 75px;
    height: 75px;
    background-color: transparent;
    cursor: pointer;
}

.portfolio-modal .close-modal:hover {
    opacity: .3;
}

.portfolio-modal .close-modal .lr {
    z-index: 1051;
    width: 1px;
    height: 75px;
    margin-left: 35px;
    background-color: #222;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.portfolio-modal .close-modal .lr .rl {
    z-index: 1052;
    width: 1px;
    height: 75px;
    background-color: #222;
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

.portfolio-modal .modal-backdrop {
    display: none;
    opacity: 0;
}

::-moz-selection {
    text-shadow: none;
    background: #fed136;
}

::selection {
    text-shadow: none;
    background: #fed136;
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background: 0 0;
}

body {
    webkit-tap-highlight-color: #fed136;
}

.timeline-section .timeline-heading h4,
.timeline-section .timeline-heading h4.subheading {
    color: #1a1a1a;
}

.timeline-section .timeline-body li,
.timeline-section .timeline-body p {
    color: #333;
}

.timeline-section .timeline-body ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.timeline-section .timeline-body ul li {
    position: relative;
    padding: 8px 0;
    line-height: 1.6;
    border-bottom: 1px solid rgba(0,0,0,0.06);
    font-size: 15px;
}

.timeline-section .timeline-body ul li:last-child {
    border-bottom: none;
}

#leftfloat{
    text-align:right;
    float:left;
}
#skillset{
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background-image: url(../img/skillset.jpg);
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    background-color:#464646;
    filter: alpha(Opacity=90);
}
#special-quote {
   font-family: 'Petit Formal Script', Helvetica,Arial,sans-serif;
   font-size:22px;
   color:white;
}
#inspiration {
    color:white;
}
#social-btn {
    border-radius: 30%;
    font-size: 20px;
    background-color: transparent;
    color: #1a1a1a;
}

#social-btn:hover,
#social-btn:focus,
#social-btn:active {
    color: #1a1a1a;
    background-color: transparent;
    transform: scale(1.3);
}

ul.social-buttons li {
    padding: 0;
    margin: 0;
}
#skillset-heading {
    color:white;
    font-weight:900;
    
}
#skillset-text {
    color:white;
    font-weight:300;
    text-align:justify;
    font-size:14px;
    margin-left:8%;
    margin-right:8%;
    margin-top:5%;
    margin-bottom:5%
}
#color-black{
    color:black
}


#skillset-label{
    font-size:100%;
    padding: 0.1em 0.6em 0.1em;
    background-color:black;
}
#skillset-progress-bar {
    font-weight:500;
    background-color:#276E29;
    text-align:left;
    padding-left:20px;
    font-size:15px;

}
#headerimg {
    position:relative;
    padding-bottom:55px;
}

@media (max-width:405px) {
    #titlehidden {
        display:none;
    }
}

@media (max-width:360px) {
    #headerimg {
        padding-bottom:0px;
    }
}
#skillset-progress-bar-red {
    font-weight:500;
    background-color:#DA1414;
    text-align:left;
    padding-left:20px;
    font-size:15px;

}
#skillset-font{
    font-size:12px;
}

.progress {
    background-color:#F2F2F2;
}

#asidetext{
    margin:3% 0%;
    
} 
#asidetextstyle {
    vertical-align:central;
    font-family: 'Indie Flower', Helvetica,Arial,sans-serif;
    font-size:40px;
}

#header-tang {
   font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
   font-weight:500;

}
#meimage {
    margin-left:auto;
    margin-right:auto;
    display:block;
    border:7px solid #EAEAEA;
    width:225px;
    height:225px;
    object-fit:cover;
}
#navbarcolor{

    border:1px solid;
    border-bottom-color:white;

}
.contact-link {
    display: inline-flex;
    align-items: center;
    gap: 10px;
    color: #fff;
    font-family: Montserrat, sans-serif;
    font-size: 15px;
    text-decoration: none;
    padding: 10px 0;
    transition: color 0.2s;
}
.contact-link:hover {
    color: #ccc;
    text-decoration: none;
}
.contact-photo-caption {
    position: absolute;
    bottom: 16px;
    right: 20px;
    color: rgba(255, 255, 255, 0.75);
    font-size: 9px;
    font-weight: 700;
    letter-spacing: 0.08em;
    text-transform: uppercase;
    font-family: Montserrat, sans-serif;
}
.contact-icon {
    font-size: 18px;
    color: rgba(255, 255, 255, 0.6);
}
#documents .panel {
    border: none;
    box-shadow: none;
    border-radius: 0;
}
#documents .panel-heading {
    background-color: transparent;
    border-bottom: 1px solid #e8e8e8;
    padding: 14px 16px;
}
#documents .panel-title {
    color: #35434e;
    font-size: 14px;
}
#documents .panel-title small {
    color: #999;
}
/* ... */

